Commit with css align issue fixed and identification mark removed from preview

--- a/src/app/candidate-dashboard/adani-module/adani-profile/joining-education/joining-education.component.scss
+++ b/src/app/candidate-dashboard/adani-module/adani-profile/joining-education/joining-education.component.scss
@@ -33,7 +33,7 @@
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: space-between;
-                align-items: flex-start;
+                align-items: flex-end;
                 .width-70 {
                     width: 70%;
                 }
